# firstdiscordbot

./: Dockerfile  pyproject.toml
src/: main.py
src/extensions/: coin_value.py  hello.py
src/utils/: bot.py
