[tool.poetry]
name = "firstdiscordbot"
version = "0.1.0"
description = "My first discord bot It is cool"
authors = ["Matthew Steinmetz <mattygsteinmetz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
"discord.py" = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
